src/blocks/column-maxi/editor.scss
.maxi-column-size-control {
	.components-base-control__field {
		flex-direction: column;
		align-items: flex-start !important;
		&__label {
			margin: 0;
		}
	}
}
.edit-post-visual-editor.editor-styles-wrapper {
	.maxi-column-block__resizer {
		div.maxi-column-block {
			width: 100% !important;
			max-width: 100% !important;
			flex-basis: 100% !important;
			margin: auto;
			height: 100%;
			outline: 1px solid #81bdda !important;
			vertical-align: top;

			&__resizer {
				line-height: 0;
				outline: 1px solid #7fbddc;
				position: relative;
				&:hover {
					outline: 2px solid #83605d;
				}
			}
		}
	}
}

